# maki

./: .drone.yml  CNAME  Cargo.toml  Dockerfile  FUNDING.yml  LICENSE  README.md  docker-compose.yaml  sqlx-data.json
.github/: FUNDING.yml
.github/workflows/: docker-image.yml  release.yml  rust.yml
graphql/: pokemon_query.graphql  pokemon_schema.graphql
migrations/: 20200827063158_maki.sql  20200921005353_custom_prefix.sql  20200921010116_prefix.sql
scripts/: before_deploy.sh  full_mem.sh  git_hash.sh  pid_cpu.sh  pid_mem.sh
src/: keys.rs  main.rs
src/commands/: general.rs  meta.rs  mod.rs  moderator.rs  settings.rs
src/commands/fun/: fun_main.rs  mod.rs  pokemon.rs
src/commands/music/: lastfm.rs  mod.rs  spotify.rs
src/commands/voice/: mod.rs  play.rs  sources.rs
src/utils/: config.rs  db.rs  html.rs  mod.rs  queue.rs  time.rs  user.rs
