[package]
name = "maki"
version = "0.1.1"
authors = ["emma <kanbaru@iscute.dev>"]
edition = "2018"

[dependencies]
log = "0.4.8"
rand = "0.7"
chrono = "0.4"
timeago = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"]}
dotenv = "0.15.0"
cached = "0.11"
graphql_client = "0.9.0"
regex = "1.3.9"
pretty_env_logger = "0.4.0"
aspotify = "0.5.0"
lazy_static = "1.4.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "sqlite", "chrono", "json" ] }
heim = { version = "0.1.0-beta.2", features = ["memory", "process"] }
chrono-humanize = "0.0.11"
two_timer = "2.1.0"
futures = "0.3.5"
humantime = "2.0.1"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "native_tls_backend", "absolute_ratelimits", "collector"]
