[package]
name = "maki"
version = "0.1.1"
authors = ["Emma Bridgers <kanbaru@iscute.dev>"]
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4.8"
rand = "0.7"
chrono = "0.4"
timeago = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
dotenv = "0.15.0"
cached = "0.11"
graphql_client = "0.9.0"
regex = "1.3.9"
pretty_env_logger = "0.4.0"
aspotify = "0.5.0"
lazy_static = "1.4.0"
heim = { git = "https://github.com/heim-rs/heim", rev = "b292f1535bb27c03800cdb7509fa81a40859fbbb", features = ["memory", "process"] }
chrono-humanize = "0.0.11"
two_timer = "2.1.0"
futures = "0.3.5"
humantime = "2.0.1"
parking_lot = "0.11.1"
# todo: remove later
indexmap = "=1.6.2"

[dependencies.sqlx]
version = "0.5.5"
features = [ "runtime-tokio-rustls", "macros", "postgres", "sqlite", "chrono", "json", "offline" ]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "voice", "rustls_backend", "absolute_ratelimits", "collector"]

[dependencies.songbird]
git = "https://github.com/kanbaru/songbird"
branch = "next"
features = ["driver","gateway","serenity-rustls"]


[patch.crates-io]
darwin-libproc = {git = "https://github.com/Orycterope/darwin-libproc", branch = "dependencies_versions"}